[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neo-api-client"
version = "2.0.0"
description = "Neo Trade API - Kotak Neo Python SDK for trading and market data"
readme = "README.md"
authors = [
    {name = "Neo API Team", email = "support@kotaksecurities.com"}
]
maintainers = [
    {name = "Neo API Team", email = "support@kotaksecurities.com"}
]
license = {text = "MIT"}
keywords = [
    "Neo-Trade API",
    "Neo Trade",
    "Kotak Securities",
    "Trading API",
    "Stock Market",
    "Financial API",
    "Trading Platform"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "bidict>=0.22.1,<1.0.0",
    "certifi>=2022.12.7",
    "idna>=2.10,<4.0",
    "numpy>=2.1.0,<3.0.0",
    "pyjsparser>=2.7.1,<3.0.0",
    "PyJWT>=2.6.0,<3.0.0",
    "python-dateutil>=2.8.2,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "requests>=2.32.3,<3.0.0",
    "six>=1.16.0,<2.0.0",
    "urllib3>=1.26.14,<2.0.0",
    "websocket-client>=1.8.0,<2.0.0",
    "websockets>=8.1,<13.0",
    "pandas>=2.2.3,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.2.0",
]

[project.urls]
Homepage = "https://github.com/Kotak-Neo/Kotak-neo-api-v2"
Documentation = "https://github.com/Kotak-Neo/Kotak-neo-api-v2/tree/main/docs"
Repository = "https://github.com/Kotak-Neo/Kotak-neo-api-v2"
Issues = "https://github.com/Kotak-Neo/Kotak-neo-api-v2/issues"
Changelog = "https://github.com/Kotak-Neo/Kotak-neo-api-v2/releases"

[tool.setuptools]
packages = ["neo_api_client", "neo_api_client.api"]
include-package-data = true

[tool.setuptools.package-data]
neo_api_client = ["*.csv", "api/*.csv"]

[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312", "py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
